# FaceIT

./: CMakeLists.txt
faceDetect/: CMakeLists.txt
faceDetect/include/: facedetect.hpp
faceDetect/src/: facedetect.cpp
include/: facedetect.hpp
src/: facedetect.cpp
